--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,67 @@
+html,
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  justify-content: center;
+}
+
+/* Entire App */
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+  flex: none;
+  /* max-width: 70%; */
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* TITLE ---------------------------------------- */
+.title-bar-div {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+/* POST ---------------------------------------- */
+.post-div {
+  display: flex;
+  flex-direction: row;
+  margin-top: -2px;
+  max-height: 350px;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.post-date {
+  border: 2px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* padding-left: 100px; */
+  margin-right: -2px;
+  padding-right: 20px;
+  width: 70%;
+  align-items: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
+.post-body {
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 20px;
+  padding-right: 100px;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-content {
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  /* width: 100%; */
+  max-height: 75%;
+  margin-bottom: 20px;
 }
