--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,10 @@ body {
   height: 70px;
   display: flex;
   flex-direction: row;
+  /* background-color: black; */
+
 }
+
 .navbar-btn {
   display: flex;
   flex-direction: column;
@@ -39,6 +42,13 @@ body {
   border: 1px solid black;
   padding-left: 10px;
 }
+
+.navbar-btn:hover {
+  cursor: pointer;
+  background-color: #B3A36E;
+  color: white;
+  border: 2px solid black;
+} 
 /* TITLE ---------------------------------------- */
 .title-bar-div {
   display: flex;
@@ -58,7 +68,7 @@ body {
 .title-bar-div h2 {
   color: black;
   font-size: 60px;
-  line-height: 80%;
+  line-height: 60%;
   letter-spacing: -3px;
   margin-top: -60px;
   background-color: #B3A36E;
@@ -74,8 +84,12 @@ body {
 /* POSTS CONTAINER ---------------------------------------- */
 .posts-container {
   overflow-y: scroll;
+  scrollbar-color: rebeccapurple #F8DA3D;
   height: auto;
 }
+  
+
+
 /* POST ---------------------------------------- */
 .post-div {
   display: flex;
@@ -112,6 +126,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  scrollbar-color: rebeccapurple #F8DA3D;
   /* width: 100%; */
   max-height: 75%;
   margin-bottom: 20px;
