--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,7 @@ body {
 .App {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
   height: auto;
   flex: none;
@@ -79,6 +80,35 @@ body {
   width: 60%;
 }
 
+.title-bar-div-alt {
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+}
+
+.title-bar-div-alt h1 {
+  font-size: 150px;
+  line-height: 80%;
+  letter-spacing: -6px;
+}
+
+.title-bar-div-alt h2 {
+  font-size: 60px;
+  line-height: 60%;
+  letter-spacing: -3px;
+  margin-top: -60px;
+  background-color: #B3A36E;
+  -webkit-text-fill-color: white;
+  width: 60%;
+}
+
+/* CONTAINER ---------------------------------------- */
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
 /* POSTS CONTAINER ---------------------------------------- */
 .posts-container {
   overflow-y: scroll;
@@ -94,6 +124,97 @@ body {
   padding-right: 20%;
 }
 
+/* NEW POST FORM CONTAINER ---------------------------------------- */
+.new-post-form-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  border: 2px solid black;
+  background-color: rgb(229, 220, 201);
+  border-radius: 12px;
+  padding: 25px;
+  width: 600px;
+  height: auto;
+}
+
+.new-post-form-div h1 {
+  font-size: 60px;
+  line-height: 60%;
+  letter-spacing: -3px;
+  /* background-color: #B3A36E; */
+  -webkit-text-fill-color: black;
+}
+
+/* Inputs */
+.post-title-input {
+  letter-spacing: 2px;
+  font-size: 40px;
+  font-weight: 700;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.post-subheading-input {
+  font-size: 30px;
+  font-weight: 700;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.post-content-textarea {
+  letter-spacing: 1px;
+  width: 500px;
+  height: 300px;
+  font-size: 25px;
+  border: none;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.post-photo-input {
+  letter-spacing: 1px;
+  font-size: 25px;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.post-form-input-divs {
+  margin: 20px;
+  /* background-color: #B3A36E; */
+}
+
+/* Submit button */
+.form-submit-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  width: 50%;
+  background-color: #F8DA3D;
+  border-radius: 12px;
+  border: 2px solid black;
+}
+
+.form-submit-btn:hover {
+  cursor: pointer;
+  background-color: #B3A36E;
+  color: white;
+}
 /* POST ---------------------------------------- */
 .post-div {
   display: flex;
@@ -117,7 +238,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* padding-left: 100px; */
   margin-right: -2px;
   padding-right: 20px;
   width: 70%;
