--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,54 @@
 html,
 body {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   margin: 0;
-  justify-content: center;
+  /* justify-content: center; */
   background-color: #F8DA3D;
 }
 
 /* Entire App */
 .App {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
   height: auto;
   flex: none;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
 }
 
+h1 {
+  font-size: 100px;
+  line-height: 80%;
+  letter-spacing: -6px;
+}
+
+h2 {
+  /* color: black; */
+  font-size: 40px;
+  /* line-height: 60%; */
+  /* letter-spacing: -3px; */
+  /* margin-top: -60px; */
+  background-color: #B3A36E;
+  -webkit-text-fill-color: white;
+  width: 60%;
+}
+
+h3 {
+  /* color: black; */
+  font-size: 40px;
+  /* line-height: 80%; */
+  /* letter-spacing: -3px; */
+  -webkit-text-fill-color: white;
+  width: 60%;
+}
+
+p {
+  font-size: 25px;
+  font-family:  sans-serif, 'Anonymous Pro', monospace;
+  letter-spacing: -1px;
+  line-height: 100%;
+}
 /* NAVBAR ---------------------------------------- */
 .navbar-container {
-  border: 2px solid black;
+  border: 1px solid black;
   margin-top: 0px;
   position: fixed;
   width: 100%;
@@ -34,6 +60,8 @@ body {
 }
 
 .navbar-btn {
+  color: black;
+  font-size: 25px;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -45,61 +73,24 @@ body {
   cursor: pointer;
   background-color: #B3A36E;
   color: white;
-  border: 2px solid black;
+  border: 1px solid black;
 } 
 /* TITLE ---------------------------------------- */
 .title-bar-div {
   display: flex;
   flex-direction: column;
   padding: 50px;
-  margin-top: 500px;
+  /* margin-top: 500px; */
   top: 100px;
   max-width: 100%;
-}
-
-.title-bar-div h1 {
-  font-size: 150px;
-  line-height: 80%;
-  letter-spacing: -6px;
-}
-
-.title-bar-div h2 {
-  /* color: black; */
-  font-size: 60px;
-  line-height: 60%;
-  letter-spacing: -3px;
-  margin-top: -60px;
-  background-color: #B3A36E;
-  -webkit-text-fill-color: white;
-      /* Will override color (regardless of order) */
-      /* -webkit-text-stroke: 1px black; */
-  /* text-shadow: -1px 1px 0 #006B5E,
-    1px 1px 0 #006B5E,
-    1px -1px 0 #006B5E,
-    -1px -1px 0 #006B5E; */
-  width: 60%;
+  text-transform: uppercase;
+  border-bottom: 2px solid black;
 }
 
 .title-bar-div-alt {
   display: flex;
   flex-direction: column;
   padding: 50px;
-}
-
-.title-bar-div-alt h1 {
-  font-size: 150px;
-  line-height: 80%;
-  letter-spacing: -6px;
-}
-
-.title-bar-div-alt h2 {
-  font-size: 60px;
-  line-height: 60%;
-  letter-spacing: -3px;
-  margin-top: -60px;
-  background-color: #B3A36E;
-  -webkit-text-fill-color: white;
-  width: 60%;
 }
 
 /* CONTAINER ---------------------------------------- */
@@ -122,6 +113,19 @@ body {
   flex-direction: column;
   padding-left: 20%;
   padding-right: 20%;
+  background-color: rgb(229, 220, 201);
+  border-radius: 20px;
+  width: 500px;
+  border: 1px solid black;
+}
+
+/* CONTACT CONTAINER ---------------------------------------- */
+.contact-container {
+  background-color: rgb(229, 220, 201);
+  padding: 20px;
+  border-radius: 20px;
+  width: 500px;
+  border: 1px solid black;
 }
 
 /* NEW POST FORM CONTAINER ---------------------------------------- */
@@ -130,7 +134,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: rgb(229, 220, 201);
   border-radius: 12px;
   padding: 25px;
@@ -220,20 +224,36 @@ body {
   display: flex;
   flex-direction: row;
   margin-top: -2px;
-  max-height: 450px;
   width: 100%;
 }
 
+.post-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+/* Post title */
 .post-header h2 {
   font-size: 40px;
-  line-height: 60%;
-  letter-spacing: -3px;
-  background-color: #B3A36E;
-  -webkit-text-fill-color: white;
+  letter-spacing: -1px;
+  line-height: 40px;
+  background-color: white;
+  -webkit-text-fill-color: #B3A36E;
+}
+
+/* Post subheading */
+.subheading {
+  letter-spacing: -1px;
+  line-height: 20px;
+  font-size: 30px;
+  -webkit-text-fill-color: black;
+  font-weight: 700;
 }
 
 .post-date {
-  border: 2px solid black;
+  border-top: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -242,10 +262,21 @@ body {
   padding-right: 20px;
   width: 70%;
   align-items: flex-end;
+  word-wrap:normal;
+}
+
+.post-date h3 {
+  /* color: black; */
+  font-size: 50px;
+  line-height: 80%;
+  letter-spacing: -3px;
+  background-color: #B3A36E;
+  -webkit-text-fill-color: white;
+  width: 60%;
 }
 
 .post-body {
-  border: 2px solid black;
+  border-top: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -257,12 +288,21 @@ body {
 .post-content {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   scrollbar-color: rebeccapurple #F8DA3D;
-  max-height: 75%;
+  /* max-height: 75%; */
   margin-bottom: 20px;
+  background-color: rgb(229, 220, 201);
+  padding: 20px;
+  border-radius: 20px;
+  border: 1px solid black;
 }
 
+.img-p {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
 .post-img {
   max-height: 500px;
 }
