--- a/client/src/App.css
+++ b/client/src/App.css
@@ -327,3 +327,47 @@ p {
   margin: 10px;
   font-size: 30px;
 }
+
+/* PAGTINATION */
+.pagination-btns {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content:space-between
+}
+
+.pagination-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  width: 200px;
+  height: 60px;
+  background-color: #F8DA3D;
+  border-radius: 12px;
+  border: 2px solid black;
+}
+
+.pagination-btn:hover {
+  cursor: pointer;
+  background-color: #B3A36E;
+  color: white;
+}
+
+.items-num-options {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+
+.items-num-option {
+  margin-right: 5px;
+  margin-left: 5px;
+  text-decoration: underline;
+}
+
+.items-num-option:hover {
+  cursor: pointer;
+  text-decoration: none;
+}
